[gd_scene load_steps=2 format=3 uid="uid://bg85kirwxtg8u"]

[ext_resource type="Script" path="res://dev/dev_console.gd" id="1_6laee"]

[node name="DevConsole" type="CanvasLayer"]
visible = false
script = ExtResource("1_6laee")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.465

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="DevConsoleRichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "














"
scroll_following = true

[node name="DevConsoleLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="text_changed" from="MarginContainer/VBoxContainer/DevConsoleLineEdit" to="." method="_on_dev_console_line_edit_text_changed"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/DevConsoleLineEdit" to="." method="_on_line_edit_text_submitted"]
